Encoding categorical data

--- a/Part 1/data_preprocessing_tool.ipynb
+++ b/Part 1/data_preprocessing_tool.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4  Germany  40.0      NaN       Yes"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -202,6 +202,91 @@
     "imputer.fit(X[:, 1:3])\n",
     "X[:, 1:3] = imputer.transform(X[:, 1:3])\n",
     "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encoding categorical data\n",
+    "\n",
+    "Most Machine Learning algorithms cannot work with categorical data and needs to be converted into numerical data. Sometimes in datasets, we encounter columns that contain categorical features (string values) for example parameter Gender will have categorical parameters like Male, Female. These labels have no specific order of preference and also since the data is string labels, machine learning models misinterpreted that there is some sort of hierarchy in them.\n",
+    "\n",
+    " One approach to solve this problem can be label encoding where we will assign a numerical value to these labels for example Male and Female mapped to 0 and 1. But this can add bias in our model as it will start giving higher preference to the Female parameter as 1>0 and ideally both labels are equally important in the dataset. To deal with this issue we will use One Hot Encoding technique."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One Hot Encoding:\n",
+    "In this technique, the categorical parameters will prepare separate columns for both Male and Female labels. So, wherever there is Male, the value will be 1 in Male column and 0 in Female column, and vice-versa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "ct =  ColumnTransformer(transformers=[('encoder', OneHotEncoder(),[0])] ,  remainder='passthrough')\n",
+    "X = np.array(ct.fit_transform(X))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0 0.0 0.0 44.0 72000.0]\n",
+      " [0.0 0.0 1.0 27.0 48000.0]\n",
+      " [0.0 1.0 0.0 30.0 54000.0]\n",
+      " [0.0 0.0 1.0 38.0 61000.0]\n",
+      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+      " [1.0 0.0 0.0 35.0 58000.0]\n",
+      " [0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+      " [1.0 0.0 0.0 48.0 79000.0]\n",
+      " [0.0 1.0 0.0 50.0 83000.0]\n",
+      " [1.0 0.0 0.0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 1 1 0 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
    ]
   }
  ],
