--- a/Part 1/data_preprocessing_tool.ipynb
+++ b/Part 1/data_preprocessing_tool.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4  Germany  40.0      NaN       Yes"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -388,6 +388,80 @@
    ],
    "source": [
     "print(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Scaling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standardisation = (x-mean(x))/standard deviation(x) (values between -3 and +3)\n",
+    "Normalisation = (x-min(x))/(max(x)-min(x)) (values between 0 and 1)\n",
+    "\n",
+    "Generally you should normalize (normalization) when the data is normally distributed, and scale (standard-\n",
+    "ization) when the data is not normally distributed. In doubt, you should go for standardization. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "#fitting the training set i.e applying the standardisation and then transforming it\n",
+    "X_train[:,3:] = sc.fit_transform(X_train[:,3:])\n",
+    "#here we are using only transform and the scaler value i.e fit is already calculated and used from the training set\n",
+    "X_test[:,3:] = sc.transform(X_test[:,3:])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 0.0 1.0 -0.19159184384578545 -1.0781259408412425]\n",
+      " [0.0 1.0 0.0 -0.014117293757057777 -0.07013167641635372]\n",
+      " [1.0 0.0 0.0 0.566708506533324 0.633562432710455]\n",
+      " [0.0 0.0 1.0 -0.30453019390224867 -0.30786617274297867]\n",
+      " [0.0 0.0 1.0 -1.9018011447007988 -1.420463615551582]\n",
+      " [1.0 0.0 0.0 1.1475343068237058 1.232653363453549]\n",
+      " [0.0 1.0 0.0 1.4379472069688968 1.5749910381638885]\n",
+      " [1.0 0.0 0.0 -0.7401495441200351 -0.5646194287757332]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 1.0 0.0 -1.4661817944830124 -0.9069571034860727]\n",
+      " [1.0 0.0 0.0 -0.44973664397484414 0.2056403393225306]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test)"
    ]
   }
  ],
