--- a/Part 2 (Regression)/Multiple Linear Regression/Multiple_Linear_Regression.ipynb
+++ b/Part 2 (Regression)/Multiple Linear Regression/Multiple_Linear_Regression.ipynb
@@ -194,6 +194,50 @@
     "np.set_printoptions(precision=2)\n",
     "print(np.concatenate((y_pred.reshape(len(y_pred),1),y_test.reshape(len(y_test),1)),1))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making single prediction\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[181566.92]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(regressor.predict([[1, 0, 0, 160000, 130000, 300000]]))\n",
+    "#\"California\" state was not input as a string in the last column but as \"1, 0, 0\" in the first three columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 8.66e+01 -8.73e+02  7.86e+02  7.73e-01  3.29e-02  3.66e-02]\n",
+      "42467.5292485298\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(regressor.coef_)\n",
+    "print(regressor.intercept_)"
+   ]
   }
  ],
  "metadata": {
